--- a/sps_new.css
+++ b/sps_new.css
@@ -3,6 +3,8 @@ body {
   font: 100% "Lato", sans-serif;
   font-weight: 300;
   height: 100%;
+  margin: 0;
+  padding: 0;
 }
 
 .blue-bg {
@@ -343,4 +345,10 @@ h2 {
 }
 footer div p{
   margin: 4rem;
+
+}
+@media screen and (max-width:650px){
+  #video5{
+    height: 200rem;
+  }
 }
